--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
 </head>
+
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
@@ -12,15 +14,34 @@
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="25" value="5" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base" value="#daced9">
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    @import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');
+    @import url('https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap');
+
+    /* Defining CSS Vars */
+    :root {
+      --base: #daced9;
+      --spacing: 10px;
+      --blur: 5px;
+    }
+    /* using CSS Vars */
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -30,9 +51,13 @@
       text-align: center;
       background: #193549;
       color: white;
-      font-family: 'helvetica neue', sans-serif;
+      font-family: 'Arima Madurai', cursive;
       font-weight: 100;
-      font-size: 50px;
+      font-size: 45px;
+    }
+
+    h2 {
+      font-family: 'Abril Fatface', cursive;
     }
 
     .controls {
@@ -45,7 +70,22 @@
   </style>
 
   <script>
+
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handUpdate() {
+      const suffix = this.dataset.sizing || '';
+      console.log(this.name)
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+      console.log(this.value + suffix)
+
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handUpdate));
+
   </script>
 
 </body>
+
 </html>
